Modify quiz options in index.html
Updated quiz options and added Input Command Quiz link.

--- a/index.html
+++ b/index.html
@@ -60,8 +60,10 @@
     <div class="container">
         <h1>Linux Quiz Hub</h1>
         <div class="subtitle">Choose your preferred quiz type:</div>
-        <a href="questions.html" class="btn">True / False Quiz</a>
+        <a href="input.html" class="btn">Input Command Quiz</a>
         <a href="choice.html" class="btn">Multiple Choice Quiz</a>
+        <a href="questions.html" class="btn">True / False Quiz</a>
     </div>
 </body>
 </html>
+
